Fixing styling and display of alerts, fixing overflow issue for content

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,6 +2,7 @@ body {
     font-family: monospace;
     font-size: 200%;
     margin: 0;
+    background-color: #f5f5f5;
 }
 header {
     background-color: pink;
@@ -29,9 +30,6 @@ header a {
 }
 
 #content {
-    background-color: #f5f5f5;
-    height: calc(100vh - 3rem - 8px);
-    overflow: hidden;
     align-items: center;
     justify-content: center;
     padding-left: 5.7rem;
@@ -53,4 +51,18 @@ header a {
 
 .neutral {
     background-color: gold;
+}
+
+.alert, .notice {
+    padding-left: 5.7rem;
+    display: block;
+    width: calc(100vw - 5.7rem)
+}
+.alert {
+    background-color: salmon;
+    color: red;
+}
+.notice {
+    background-color: greenyellow;
+    color: green;
 }
